[[example]]
name = 'example'
path = 'examples/main.rs'

[[example]]
name = 'hello'
path = 'examples/hello.rs'

[[example]]
name = 'hello_handler'
path = 'examples/hello_handler.rs'

[[example]]
name = 'json'
path = 'examples/json.rs'

[[example]]
name = 'app_state'
path = 'examples/app_state.rs'

[[example]]
name = 'cookies'
path = 'examples/cookies.rs'

[[example]]
name = 'session'
path = 'examples/session.rs'

[package]
name = 'obsidian'
version = '0.3.0-dev'
authors = [
    'Gan Jun Kai <kuhn96@gmail.com>',
    'Wai Pai Lee <pailee.wai@gmail.com>',
]
edition = '2018'
description = 'Ergonomic async http framework for amazing, reliable and efficient web'
readme = "README.md"
homepage = "https://obsidian-rs.github.io"
repository = 'https://github.com/obsidian-rs/obsidian'
license = 'MIT'
keywords = [
    'obsidian',
    'async',
    'http',
    'web',
    'framework'
]
categories = ["asynchronous", "web-programming::http-server", "network-programming"]

[dependencies]
hyper = "0.13.5"
http = "0.2.1"
serde_json = "1.0.52"
url = '2.1.1'
async-std = "1.5.0"
async-trait = "0.1.30"
colored = "1.9.3"
cookie = "0.13.3"
chrono = "0.4.11"
lazy_static = "1.4.0"
rand = "0.7.3"

[dependencies.serde]
version = '1.0.106'
features = ['derive']

[dependencies.tokio]
version = '0.2.20'
features = ['macros']
