[[example]]
name = 'example'
path = 'examples/main.rs'

[[example]]
name = 'hello'
path = 'examples/hello.rs'

[[example]]
name = 'hello_handler'
path = 'examples/hello_handler.rs'

[[example]]
name = 'json'
path = 'examples/json.rs'

[[example]]
name = 'app_state'
path = 'examples/app_state.rs'

[package]
name = 'obsidian'
version = '0.2.2'
authors = [
    'Gan Jun Kai <kuhn96@gmail.com>',
    'Wai Pai Lee <pailee.wai@gmail.com>',
]
edition = '2018'
description = 'Ergonomic async http framework for amazing, reliable and efficient web'
readme = "README.md"
homepage = "https://obsidian-rs.github.io"
repository = 'https://github.com/obsidian-rs/obsidian'
license = 'MIT'
keywords = [
    'obsidian',
    'async',
    'http',
    'web',
    'framework'
]
categories = ["asynchronous", "web-programming::http-server", "network-programming"]

[dependencies]
hyper = '0.13.1'
http = '0.2.0'
serde_json = '1.0.44'
url = '2.1.0'
async-std = '1.4.0'
async-trait = '0.1.22'

[dependencies.serde]
version = '1.0.104'
features = ['derive']

[dependencies.tokio]
version = '1.3.0'
features = ['macros']
