[package]
name = 'obsidian'
version = '0.3.0-dev'
authors = [
    'Gan Jun Kai <junkai@hey.com>',
    'Wai Pai Lee <pailee.wai@gmail.com>',
]
edition = '2018'
description = 'Ergonomic async http framework for amazing, reliable and efficient web'
readme = "README.md"
homepage = "https://obsidian-rs.github.io"
repository = 'https://github.com/obsidian-rs/obsidian'
license = 'MIT'
keywords = [
    'obsidian',
    'async',
    'http',
    'web',
    'framework'
]
categories = ["asynchronous", "web-programming::http-server", "network-programming"]

[[example]]
name = 'example'
path = 'examples/main.rs'

[[example]]
name = 'hello'
path = 'examples/hello.rs'

[[example]]
name = 'hello_handler'
path = 'examples/hello_handler.rs'

[[example]]
name = 'json'
path = 'examples/json.rs'

[[example]]
name = 'app_state'
path = 'examples/app_state.rs'

[dependencies]
hyper = { version = "0.14.9", features = [ "full" ] }
http = "0.2.4"
serde = { version = "1.0.126", features = [ "derive" ] }
serde_json = "1.0.64"
url = "2.2.2"
async-std = "1.9.0"
tokio = { version = "1.7.0", features = [ "macros", "rt-multi-thread" ] }
async-trait = "0.1.50"
colored = "2.0.0"
